--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <p>时间：100分钟</p>
                     <p>学号：<input type="text"></p>
                 </div>
-                <div class="col-xs-6 col-sm-3" id = "allscores">
-                    <p>得分：</p>
+                <div class="col-xs-6 col-sm-3">
+                    <p  id = "allscores">得分：</p>
                     <p>姓名：<input type="text"></p>
                 </div>
             </div>
